fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1265,14 +1265,12 @@ video {
   width: 1.5rem;
 }
 
-.max-w-screen-lg {
-  max-width: 1024px;
+.w-\[300px\] {
+  width: 300px;
 }
 
-.scale-50 {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.max-w-screen-lg {
+  max-width: 1024px;
 }
 
 .transform {
@@ -1305,10 +1303,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.overflow-scroll {
-  overflow: scroll;
 }
 
 .rounded-xl {
@@ -1377,11 +1371,6 @@ video {
 
 .to-blue-100 {
   --tw-gradient-to: #dbeafe;
-}
-
-.object-scale-down {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
 }
 
 .p-0 {
